--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 
     <ol id="messages">
-      
+
     </ol>
 
 
@@ -19,6 +19,7 @@
       <button>Send</button>
 
     </form>
+      <button id="send-location">Send location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.1.1.js"></script>
